<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_db" />

    <Button
        android:id="@+id/btn_bitmap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_bitmap" />

    <Button
        android:id="@+id/btn_gethtml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_html"/>

    <Button
        android:id="@+id/btn_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_download"/>

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_upload"/>

    <ImageView
        android:id="@+id/iv_bitmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_html"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>


</LinearLayout>